# tecod

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
conf/: config.yaml
conf/data/: financial.yaml
conf/env/: local.yaml  openai.yaml
docs/: README.md  api.md  architecture.md  configuration.md  data-preparation.md  generation-methods.md  quickstart.md
examples/: README.md  advanced_usage.py  basic_usage.py  integration_example.py  openai_usage.py
examples/financial/: raw_data.json
site/: index.html
src/: __init__.py  api.py  nli.py
src/cli/: commands.py
src/config/: __init__.py  manager.py  models.py
src/exceptions/: __init__.py  base.py
src/models/: __init__.py  data.py
src/prompts/: __init__.py  arctic.py  codes.py  consts.py  default.py  granite.py  llama.py  qwencoder.py  utils.py
src/services/: __init__.py  base.py  embedding.py  factory.py  model.py  openai_compat.py  tecod.py  template.py  vector_store.py
src/utils/: __init__.py  codes_db_utils.py  generation.py  logging.py  timing.py
